// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/pr/changelog/github getChangeLogJSON filters unnecessary warns 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "apiBaseUrl": "https://api.github.com/",
    "baseUrl": "https://github.com/",
    "depName": "@renovate/no",
    "repository": "chalk/chalk",
    "sourceDirectory": undefined,
    "sourceUrl": "https://github.com/chalk/chalk",
    "type": "github",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "2.5.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2017-12-24T03:20:46.238Z",
      "releaseNotes": null,
      "version": "2.4.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "releaseNotes": Object {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "releaseNotes": Object {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/pr/changelog/github getChangeLogJSON supports github enterprise and github enterprise changelog 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "apiBaseUrl": "https://github-enterprise.example.com/api/v3/",
    "baseUrl": "https://github-enterprise.example.com/",
    "depName": "renovate",
    "repository": "chalk/chalk",
    "sourceDirectory": undefined,
    "sourceUrl": "https://github-enterprise.example.com/chalk/chalk",
    "type": "github",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "2.5.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2017-12-24T03:20:46.238Z",
      "releaseNotes": null,
      "version": "2.4.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "releaseNotes": Object {
        "notesSourceUrl": "",
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "releaseNotes": Object {
        "notesSourceUrl": "",
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/pr/changelog/github getChangeLogJSON supports github enterprise and github.com changelog 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "apiBaseUrl": "https://api.github.com/",
    "baseUrl": "https://github.com/",
    "depName": "renovate",
    "repository": "chalk/chalk",
    "sourceDirectory": undefined,
    "sourceUrl": "https://github.com/chalk/chalk",
    "type": "github",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "2.5.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2017-12-24T03:20:46.238Z",
      "releaseNotes": null,
      "version": "2.4.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "releaseNotes": Object {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "releaseNotes": Object {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/pr/changelog/github getChangeLogJSON supports node engines 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "apiBaseUrl": "https://api.github.com/",
    "baseUrl": "https://github.com/",
    "depName": "renovate",
    "repository": "chalk/chalk",
    "sourceDirectory": undefined,
    "sourceUrl": "https://github.com/chalk/chalk",
    "type": "github",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "2.5.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2017-12-24T03:20:46.238Z",
      "releaseNotes": null,
      "version": "2.4.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "releaseNotes": Object {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "releaseNotes": Object {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/pr/changelog/github getChangeLogJSON uses GitHub tags 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "apiBaseUrl": "https://api.github.com/",
    "baseUrl": "https://github.com/",
    "depName": "renovate",
    "repository": "chalk/chalk",
    "sourceDirectory": undefined,
    "sourceUrl": "https://github.com/chalk/chalk",
    "type": "github",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "2.5.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2017-12-24T03:20:46.238Z",
      "releaseNotes": null,
      "version": "2.4.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "releaseNotes": Object {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "releaseNotes": Object {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/pr/changelog/github getChangeLogJSON works without Github 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "apiBaseUrl": "https://api.github.com/",
    "baseUrl": "https://github.com/",
    "depName": "renovate",
    "repository": "chalk/chalk",
    "sourceDirectory": undefined,
    "sourceUrl": "https://github.com/chalk/chalk",
    "type": "github",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "2.5.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2017-12-24T03:20:46.238Z",
      "releaseNotes": null,
      "version": "2.4.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "releaseNotes": Object {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "releaseNotes": Object {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;
